--- a/src/app/panel-liste/panel-liste.component.html
+++ b/src/app/panel-liste/panel-liste.component.html
@@ -1,43 +1,123 @@
 <mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-  </mat-form-field>
-  
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
-  
-      <!-- ID Column -->
+  <mat-label>Filter</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+</mat-form-field>
+<div class="mat-elevation-z8">
+  <div *ngIf="typePanel == 'Gestion des utilisateurs' && isData==true">
+    <mat-table #table [dataSource]="dataSource">
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+        <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
       </ng-container>
-  
-      <!-- Progress Column -->
-      <ng-container matColumnDef="progress">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-        <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+      <ng-container matColumnDef="nom">
+        <mat-header-cell *matHeaderCellDef> Nom </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.nom}} </mat-cell>
       </ng-container>
-  
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+      <ng-container matColumnDef="prenom">
+        <mat-header-cell *matHeaderCellDef> Prénom </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.prenom}} </mat-cell>
       </ng-container>
-  
-      <!-- Color Column -->
-      <ng-container matColumnDef="color">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
-        <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.color}} </td>
+      <ng-container matColumnDef="role">
+        <mat-header-cell *matHeaderCellDef> Rôle </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.role}} </mat-cell>
       </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
-      <!-- Row shown when there is no matching data. -->
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-      </tr>
-    </table>
-  
+      <ng-container matColumnDef="email">
+        <mat-header-cell *matHeaderCellDef> Email </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.email}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="phone">
+        <mat-header-cell *matHeaderCellDef> Phone </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.phone}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="licence">
+        <mat-header-cell *matHeaderCellDef> Licence </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.licence}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="suppression">
+        <mat-header-cell *matHeaderCellDef> Supprimer </mat-header-cell>
+        <mat-cell *matCellDef="let element"><button type="button" mat-raised-button color="warn" (click)="openDialogDelete(element)"> {{element.suppression}}</button> </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="modification">
+        <mat-header-cell *matHeaderCellDef> Modifier </mat-header-cell>
+        <mat-cell *matCellDef="let element"><button type="button" mat-raised-button color="primary" (click)="modifier(element)"> {{element.modification}}</button></mat-cell>
+      </ng-container>
+      <mat-header-row *matHeaderRowDef="displayedColumnsUser"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumnsUser;"></mat-row>
+    </mat-table>
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
+  <div *ngIf="typePanel == 'Gestion des chevaux' && isData==true">
+    <mat-table #table [dataSource]="dataSource">
+      <ng-container matColumnDef="id">
+        <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="nom">
+        <mat-header-cell *matHeaderCellDef> Nom </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.nom}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="type">
+        <mat-header-cell *matHeaderCellDef> Type </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.type}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="poids">
+        <mat-header-cell *matHeaderCellDef> Poids </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.poids}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="taille">
+        <mat-header-cell *matHeaderCellDef> Taille </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.taille}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="suppression">
+        <mat-header-cell *matHeaderCellDef> Supprimer </mat-header-cell>
+        <mat-cell *matCellDef="let element"><button type="button" mat-raised-button color="warn" (click)="openDialogDelete(element)"> {{element.suppression}}</button> </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="modification">
+        <mat-header-cell *matHeaderCellDef> Modifier </mat-header-cell>
+        <mat-cell *matCellDef="let element"><button type="button" mat-raised-button color="primary" (click)="modifier(element)"> {{element.modification}}</button></mat-cell>
+      </ng-container>
+      <mat-header-row *matHeaderRowDef="displayedColumnsCheval"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumnsCheval;"></mat-row>
+    </mat-table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  </div>
+  <div *ngIf="typePanel == 'Gestion des cours' && isData==true">
+    <mat-table #table [dataSource]="dataSource">
+      <ng-container matColumnDef="id">
+        <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="titre">
+        <mat-header-cell *matHeaderCellDef> Titre </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.titre}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="date">
+        <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.dateCours}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="horaire">
+        <mat-header-cell *matHeaderCellDef> Horaire </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.horaire}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="nbrCavalier">
+        <mat-header-cell *matHeaderCellDef> Nombres d'élèves </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.nbrCavalier}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="niveau">
+        <mat-header-cell *matHeaderCellDef> niveau/galop </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.niveau}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="suppression">
+        <mat-header-cell *matHeaderCellDef> Supprimer </mat-header-cell>
+        <mat-cell *matCellDef="let element"><button type="button" mat-raised-button color="warn" (click)="openDialogDelete(element)"> {{element.suppression}}</button> </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="modification">
+        <mat-header-cell *matHeaderCellDef> Modifier </mat-header-cell>
+        <mat-cell *matCellDef="let element"><button type="button" mat-raised-button color="primary" (click)="modifier(element)"> {{element.modification}}</button></mat-cell>
+      </ng-container>
+      <mat-header-row *matHeaderRowDef="displayedColumnsCour"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumnsCour;"></mat-row>
+    </mat-table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  </div>
+</div>
