--- a/src/app/panel-principal/panel-principal.component.html
+++ b/src/app/panel-principal/panel-principal.component.html
@@ -1,9 +1,9 @@
 <div>
     <div *ngIf="isLogin==false">
-      <app-panel-login (sentForm)="inscription($event)" (sentForm2)="getPassword($event)" (sentForm3)="connexion($event)"></app-panel-login>
+      <app-panel-login (formulaireInscription)="inscription($event)" (formulaireRecupMdp)="getPassword($event)" (formulaireConnexion)="connexion($event)"></app-panel-login>
     </div>
     <mat-divider></mat-divider>
     <div *ngIf="isLogin==true">
-      <app-panel-general></app-panel-general>
+      <app-panel-general [utilisateur]="utilisateur" (isLoggedEvent)="changeLoginStatus($event)"></app-panel-general>
     </div>
 </div>
